--- a/src/assets/excel.html
+++ b/src/assets/excel.html
@@ -1,108 +1,202 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="favicon.ico">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <title>JavaScript Exel</title>
+  <meta charset="UTF-8">
+  <meta name="viewport"
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="shortcut icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <title>Pure JavaScript Excel</title>
 </head>
 <body>
-    
-    <div id="app" class="container">
-        <div class="excel">
 
-            <div class="excel__header">
-                <input type="text" value="Новая талица" class="excel__input" />
+<div id="app" class="container">
 
-                <div>
-                    <div class="excel__button">
-                        <span class="material-icons">
-                            delete
-                        </span>
-                    </div>
+  <div class="excel">
 
-                    <div class="excel__button">
-                        <span class="material-icons">
-                            exit_to_app
-                        </span>
-                    </div>
-                </div>
-            </div>
+    <div class="excel__header">
 
-            <div class="excel__toolbar">
-                <div class="excel__button">
-                    <span class="material-icons">
-                        format_align_left
-                    </span>
-                </div>
-                <div class="excel__button">
-                    <span class="material-icons">
-                        format_align_center
-                    </span>
-                </div>
-                <div class="excel__button">
-                    <span class="material-icons">
-                        format_align_right
-                    </span>
-                </div>
-                <div class="excel__button">
-                    <span class="material-icons">
-                        format_bold
-                    </span>
-                </div>
-                <div class="excel__button">
-                    <span class="material-icons">
-                        format_italic
-                    </span>
-                </div>
-                <div class="excel__button">
-                    <span class="material-icons">
-                        format_underlined
-                    </span>
-                </div>
-            </div>
+      <input type="text" class="input" value="Новая таблица" />
 
-            <div class="excel__formula">
-                <div class="formula__info">fx</div>
-                <div class="formula__input" contenteditable spellcheck="false"></div>
-            </div>
+      <div>
 
-            <div class="excel__table">
-                <div class="table__row">
-                    <div class="row-info">
+        <div class="button">
+          <i class="material-icons">delete</i>
+        </div>
 
-                    </div>
+        <div class="button">
+          <i class="material-icons">exit_to_app</i>
+        </div>
 
-                    <div class="row__data">
-                        <div class="data__column">
-                            A
-                        </div>
-                        <div class="data__column">
-                            B
-                        </div>
-                        <div class="data__column">
-                            C
-                        </div>
-                        
-                    </div>
-                </div>
+      </div>
 
-                <div class="table__row">
-                    <div class="row-info">
-                        1
-                    </div>
+    </div>
 
-                    <div class="row__data">
-                        <div class="cell" contenteditable>123</div>
-                        <div class="cell" contenteditable>32423</div>
-                        <div class="cell" contenteditable>343</div>
-                    </div>
-                </div>
-            </div>
+    <div class="excel__toolbar">
+
+      <div class="button">
+        <i class="material-icons">format_align_left</i>
+      </div>
+
+      <div class="button">
+        <i class="material-icons">format_align_center</i>
+      </div>
+
+      <div class="button">
+        <i class="material-icons">format_align_right</i>
+      </div>
+
+      <div class="button">
+        <i class="material-icons">format_bold</i>
+      </div>
+
+      <div class="button">
+        <i class="material-icons">format_italic</i>
+      </div>
+
+      <div class="button">
+        <i class="material-icons">format_underlined</i>
+      </div>
+
+    </div>
+
+    <div class="excel__formula">
+      <div class="info">fx</div>
+      <div class="input" contenteditable spellcheck="false"></div>
+    </div>
+
+    <div class="excel__table">
+
+      <div class="row">
+
+        <div class="row-info"></div>
+
+        <div class="row-data">
+          <div class="column">
+            A
+          </div>
+          <div class="column">
+            B
+          </div>
+          <div class="column">
+            C
+          </div>
+          <div class="column">
+            A
+          </div>
+          <div class="column">
+            B
+          </div>
+          <div class="column">
+            C
+          </div>
+          <div class="column">
+            A
+          </div>
+          <div class="column">
+            B
+          </div>
+          <div class="column">
+            C
+          </div>
+          <div class="column">
+            A
+          </div>
+          <div class="column">
+            B
+          </div>
+          <div class="column">
+            C
+          </div>
+          <div class="column">
+            A
+          </div>
+          <div class="column">
+            B
+          </div>
+          <div class="column">
+            C
+          </div>
+          <div class="column">
+            A
+          </div>
+          <div class="column">
+            B
+          </div>
+          <div class="column">
+            C
+          </div>
+          <div class="column">
+            A
+          </div>
+          <div class="column">
+            B
+          </div>
+          <div class="column">
+            C
+          </div>
+          <div class="column">
+            A
+          </div>
+          <div class="column">
+            B
+          </div>
+          <div class="column">
+            C
+          </div>
+          <div class="column">
+            A
+          </div>
+          <div class="column">
+            B
+          </div>
+          <div class="column">
+            C
+          </div>
+          <div class="column">
+            A
+          </div>
+          <div class="column">
+            B
+          </div>
+          <div class="column">
+            C
+          </div>
 
         </div>
+
+      </div>
+
+      <div class="row">
+        <div class="row-info">
+          1
+        </div>
+
+        <div class="row-data">
+          <div class="cell selected" contenteditable="">A1</div>
+          <div class="cell" contenteditable>B2</div>
+          <div class="cell" contenteditable="">C3</div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="row-info">
+          2
+        </div>
+
+        <div class="row-data">
+          <div class="cell">A1</div>
+          <div class="cell">B2</div>
+          <div class="cell">C3</div>
+        </div>
+      </div>
+
     </div>
+
+  </div>
+
+</div>
 
 </body>
 </html>
